[workspace]

[package]
name = "header-check"
version = "0.0.0"
edition = "2021"
license = "MPL-2.0"
build = "build.rs"
publish = false

[dependencies]
libc = "0.2.153"
libnvme-sys = { path = "../" }

[build-dependencies]
libnvme-sys = { path = "../" }
ctest2 = "0.4.7"

[[test]]
name = "main"
path = "test/main.rs"
harness = false
